--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>hu.unideb.inf.prt</groupId>
-	<artifactId>tetris</artifactId>
+	<groupId>hu.atka</groupId>
+	<artifactId>tetris-ai</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
-	<name>Tetris</name>
-	<description>The well known Tetris game implemented as an assignment project</description>
+	<name>Tetris AI</name>
 	<scm>
-		<url>https://github.com/atka66/prt-tetris</url>
+		<url>https://github.com/atka66/tetris-ai</url>
 	</scm>
 	<developers>
 		<developer>
@@ -21,11 +20,7 @@
 			<timezone>Europe/Budapest</timezone>
 		</developer>
 	</developers>
-	<inceptionYear>2016</inceptionYear>
-	<organization>
-		<name>University of Debrecen, Faculty of Informatics</name>
-		<url>http://www.inf.unideb.hu/</url>
-	</organization>
+	<inceptionYear>2018</inceptionYear>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
@@ -37,26 +32,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.1.0.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.1.0.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-java8</artifactId>
-			<version>5.1.0.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.0.Final</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -79,11 +54,6 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle.jdbc</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>12.1.0.2</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -130,7 +100,7 @@
 						<configuration>
 							<archive>
 								<manifest>
-									<mainClass>hu.unideb.inf.prt.tetris.view.main.Main</mainClass>
+									<mainClass>hu.atka.tetrisai.view.main.Main</mainClass>
 								</manifest>
 							</archive>
 							<descriptorRefs>
@@ -142,47 +112,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.19.1</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.5</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
-				<reportSets>
-					<reportSet>
-						<id>cobertura</id>
-						<reports>
-							<report>cobertura</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<configLocation>checkstyle.xml</configLocation>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 </project>
